[gd_scene load_steps=11 format=2]

[ext_resource path="res://gd/HP.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Pies/ButterChickenIdle2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pies/SteacknCheeseIdle2.png" type="Texture" id=3]
[ext_resource path="res://font/Tigerious-ywyKe.otf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Item 3-1.png.png" type="Texture" id=5]
[ext_resource path="res://gd/ITEM.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Pies/MincePieIdle2.png" type="Texture" id=7]
[ext_resource path="res://gd/HUD.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 269.0
margin_bottom = 79.0
color = Color( 1, 1, 1, 0.223529 )

[node name="HP" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HP" type="Label" parent="HP"]
modulate = Color( 0.847059, 0.0745098, 0.0745098, 1 )
margin_left = 5.0
margin_top = 14.0
margin_right = 55.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "HP"
align = 1

[node name="heart" type="TextureRect" parent="HP"]
margin_left = 59.0
margin_top = -6.0
margin_right = 123.0
margin_bottom = 58.0
texture = ExtResource( 5 )

[node name="heart2" type="TextureRect" parent="HP"]
margin_left = 107.0
margin_top = -7.0
margin_right = 171.0
margin_bottom = 57.0
texture = ExtResource( 5 )

[node name="heart3" type="TextureRect" parent="HP"]
margin_left = 154.0
margin_top = -7.0
margin_right = 218.0
margin_bottom = 57.0
texture = ExtResource( 5 )

[node name="heart4" type="TextureRect" parent="HP"]
margin_left = 199.0
margin_top = -6.0
margin_right = 263.0
margin_bottom = 58.0
texture = ExtResource( 5 )

[node name="ITEM" type="Node" parent="."]
script = ExtResource( 6 )

[node name="ITEM" type="Label" parent="ITEM"]
modulate = Color( 0.0509804, 0.211765, 0.858824, 1 )
margin_left = 6.0
margin_top = 53.0
margin_right = 56.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
text = "ITEM"

[node name="butterchicken" type="TextureRect" parent="ITEM"]
visible = false
margin_left = 64.0
margin_top = 41.0
margin_right = 128.0
margin_bottom = 81.0
texture = ExtResource( 2 )

[node name="steackncheese" type="TextureRect" parent="ITEM"]
visible = false
margin_left = 198.0
margin_top = 41.0
margin_right = 262.0
margin_bottom = 81.0
texture = ExtResource( 3 )

[node name="mincepie" type="TextureRect" parent="ITEM"]
visible = false
margin_left = 130.0
margin_top = 41.0
margin_right = 194.0
margin_bottom = 81.0
texture = ExtResource( 7 )
